# Neural-network-cpp

./: CMakeLists.txt  README.md
examples/: mnist_example.cpp  xor_example.cpp
include/nn/: loss.hpp  network.hpp  optimizer.hpp  serialization.hpp  tensor.hpp
include/nn/layers/: activations.hpp  conv2d.hpp  dense.hpp  layer.hpp  pooling.hpp
src/: tensor.cpp
src/layers/: activations.cpp  conv2d.cpp  dense.cpp  pooling.cpp
tests/: test_layers.cpp  test_network.cpp  test_tensor.cpp
